--- a/DairyTest/en.lproj/MainStoryboard.storyboard
+++ b/DairyTest/en.lproj/MainStoryboard.storyboard
@@ -1,23 +1,155 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="2519" systemVersion="12A206j" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="2">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="3084" systemVersion="11G63" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="Ivy-dV-ntw">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="1856"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="2083"/>
     </dependencies>
     <scenes>
-        <!--class Prefix:identifier View Controller-->
-        <scene sceneID="5">
+        <!--Location Vier Controller View Controller - 我的位置-->
+        <scene sceneID="nOD-4m-HUo">
             <objects>
-                <viewController id="2" customClass="ViewController" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="3">
-                        <rect key="frame" x="0.0" y="20" width="320" height="460"/>
+                <viewController id="6Nd-6G-LHO" customClass="LocationVierControllerViewController" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="pSs-5J-wSn">
+                        <rect key="frame" x="0.0" y="20" width="320" height="499"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
+                    <tabBarItem key="tabBarItem" title="我的位置" id="u37-Xc-ppn"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ZLl-1T-EbJ" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-560" y="-86"/>
+        </scene>
+        <!--View Controller - 我的日记-->
+        <scene sceneID="hY5-ND-9Uy">
+            <objects>
+                <viewController id="3rg-HS-Oah" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="JAi-Kc-0e4">
+                        <rect key="frame" x="0.0" y="20" width="320" height="499"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="我的日记" id="Fdu-Yg-sRo"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="iQu-Qh-bnR" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-560" y="-739"/>
+        </scene>
+        <!--Tab Bar Controller-->
+        <scene sceneID="qv4-at-CNB">
+            <objects>
+                <tabBarController definesPresentationContext="YES" id="Ivy-dV-ntw" sceneMemberID="viewController">
+                    <nil key="simulatedBottomBarMetrics"/>
+                    <tabBar key="tabBar" contentMode="scaleToFill" id="HHM-dz-Hm4">
+                        <rect key="frame" x="129" y="330" width="163" height="49"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="3rg-HS-Oah" kind="relationship" relationship="viewControllers" id="kgK-MP-8lU"/>
+                        <segue destination="6Nd-6G-LHO" kind="relationship" relationship="viewControllers" id="f1i-d1-6xR"/>
+                        <segue destination="2" kind="relationship" relationship="viewControllers" id="fTV-9E-Lpx"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="aJp-EI-dTL" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1138" y="-438"/>
+        </scene>
+        <!--About View Controller - 关于作者-->
+        <scene sceneID="5">
+            <objects>
+                <viewController id="2" customClass="AboutViewController" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="j6z-3o-B9R">
+                        <rect key="frame" x="0.0" y="20" width="320" height="499"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="作者程序简介" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YM0-03-D5j">
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="183" id="Bt1-CM-kp7"/>
+                                    <constraint firstAttribute="height" constant="37" id="xGS-3U-122"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="3Jh-ds-DOz">
+                                <segments>
+                                    <segment title="陆晓俊"/>
+                                    <segment title="Crazy"/>
+                                </segments>
+                                <connections>
+                                    <action selector="authorChanged:" destination="2" eventType="valueChanged" id="LoK-bA-miq"/>
+                                </connections>
+                            </segmentedControl>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="LNL-1q-Wek">
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="257" id="b3h-WJ-5db"/>
+                                </constraints>
+                            </imageView>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="QQ: 000000000" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Azc-ya-ygs">
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="34" id="8Pb-AX-5jT"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="微博: 000000000000" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LWo-54-4bE">
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="37" id="S67-gr-Nmg"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="LWo-54-4bE" firstAttribute="leading" secondItem="j6z-3o-B9R" secondAttribute="leading" constant="20" symbolic="YES" type="default" id="1gC-41-jPP"/>
+                            <constraint firstItem="Azc-ya-ygs" firstAttribute="leading" secondItem="j6z-3o-B9R" secondAttribute="leading" constant="20" symbolic="YES" type="default" id="6Oh-Gz-YkB"/>
+                            <constraint firstAttribute="bottom" secondItem="LNL-1q-Wek" secondAttribute="bottom" constant="20" symbolic="YES" type="default" id="6Om-YY-Ii5"/>
+                            <constraint firstItem="YM0-03-D5j" firstAttribute="top" secondItem="j6z-3o-B9R" secondAttribute="top" constant="20" symbolic="YES" type="default" id="8Ll-Pa-V5b"/>
+                            <constraint firstItem="3Jh-ds-DOz" firstAttribute="top" secondItem="j6z-3o-B9R" secondAttribute="top" constant="75" id="CJ1-FN-jP5"/>
+                            <constraint firstItem="3Jh-ds-DOz" firstAttribute="centerX" secondItem="Azc-ya-ygs" secondAttribute="centerX" type="default" id="CKf-pR-b2k"/>
+                            <constraint firstItem="3Jh-ds-DOz" firstAttribute="centerX" secondItem="YM0-03-D5j" secondAttribute="centerX" type="default" id="GvN-x0-sEL"/>
+                            <constraint firstItem="LNL-1q-Wek" firstAttribute="leading" secondItem="j6z-3o-B9R" secondAttribute="leading" constant="20" symbolic="YES" type="default" id="HX4-fc-f3a"/>
+                            <constraint firstAttribute="trailing" secondItem="Azc-ya-ygs" secondAttribute="trailing" constant="20" symbolic="YES" type="default" id="MKX-K6-Qoq"/>
+                            <constraint firstItem="LWo-54-4bE" firstAttribute="top" secondItem="j6z-3o-B9R" secondAttribute="top" constant="202" id="XSM-S4-A9y"/>
+                            <constraint firstAttribute="trailing" secondItem="LNL-1q-Wek" secondAttribute="trailing" constant="20" symbolic="YES" type="default" id="n40-xJ-C1e"/>
+                            <constraint firstItem="Azc-ya-ygs" firstAttribute="top" secondItem="j6z-3o-B9R" secondAttribute="top" constant="146" id="rcp-1o-EDp"/>
+                            <constraint firstAttribute="trailing" secondItem="LWo-54-4bE" secondAttribute="trailing" constant="20" symbolic="YES" type="default" id="ufN-jU-jok"/>
+                        </constraints>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="关于作者" id="2sk-OB-EZp"/>
+                    <connections>
+                        <outlet property="authorImage" destination="LNL-1q-Wek" id="ghX-Zq-xqu"/>
+                        <outlet property="authors" destination="3Jh-ds-DOz" id="nQ5-B1-RwD"/>
+                        <outlet property="qqNumber" destination="Azc-ya-ygs" id="Bek-UT-YbF"/>
+                        <outlet property="weiBo" destination="LWo-54-4bE" id="1dA-X2-LKB"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="4" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="-156" y="-457"/>
         </scene>
     </scenes>
+    <classes>
+        <class className="AboutViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/AboutViewController.h"/>
+            <relationships>
+                <relationship kind="action" name="authorChanged:"/>
+                <relationship kind="outlet" name="authorImage" candidateClass="UIImageView"/>
+                <relationship kind="outlet" name="authors" candidateClass="UISegmentedControl"/>
+                <relationship kind="outlet" name="qqNumber" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="weiBo" candidateClass="UILabel"/>
+            </relationships>
+        </class>
+        <class className="LocationVierControllerViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/LocationVierControllerViewController.h"/>
+        </class>
+        <class className="NSLayoutConstraint" superclassName="NSObject">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/NSLayoutConstraint.h"/>
+        </class>
+    </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
         <simulatedOrientationMetrics key="orientation"/>
