--- a/DairyTest/en.lproj/MainStoryboard.storyboard
+++ b/DairyTest/en.lproj/MainStoryboard.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="3084" systemVersion="11G63" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="Ivy-dV-ntw">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="3084" systemVersion="12E55" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="Ivy-dV-ntw">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="2083"/>
     </dependencies>
@@ -19,15 +19,15 @@
             </objects>
             <point key="canvasLocation" x="-560" y="-86"/>
         </scene>
-        <!--View Controller - 我的日记-->
+        <!--My Diary View Controller - 我的日记-->
         <scene sceneID="hY5-ND-9Uy">
             <objects>
-                <viewController id="3rg-HS-Oah" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="JAi-Kc-0e4">
+                <viewController id="3rg-HS-Oah" customClass="MyDiaryViewController" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="MTs-ZU-vRb">
                         <rect key="frame" x="0.0" y="20" width="320" height="499"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
-                    </view>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </tableView>
                     <tabBarItem key="tabBarItem" title="我的日记" id="Fdu-Yg-sRo"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iQu-Qh-bnR" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -132,24 +132,6 @@
             <point key="canvasLocation" x="-156" y="-457"/>
         </scene>
     </scenes>
-    <classes>
-        <class className="AboutViewController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/AboutViewController.h"/>
-            <relationships>
-                <relationship kind="action" name="authorChanged:"/>
-                <relationship kind="outlet" name="authorImage" candidateClass="UIImageView"/>
-                <relationship kind="outlet" name="authors" candidateClass="UISegmentedControl"/>
-                <relationship kind="outlet" name="qqNumber" candidateClass="UILabel"/>
-                <relationship kind="outlet" name="weiBo" candidateClass="UILabel"/>
-            </relationships>
-        </class>
-        <class className="LocationVierControllerViewController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/LocationVierControllerViewController.h"/>
-        </class>
-        <class className="NSLayoutConstraint" superclassName="NSObject">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/NSLayoutConstraint.h"/>
-        </class>
-    </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
         <simulatedOrientationMetrics key="orientation"/>
